--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.SmartStackBills"
         tools:targetApi="31">
         <activity
-            android:name=".createBills"
+            android:name=".createBill"
             android:exported="false" />
         <activity
             android:name=".MyBills"
