--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.SmartStackBills"
         tools:targetApi="31">
         <activity
-            android:name=".createSpending2"
+            android:name=".createSpending"
             android:exported="false" />
         <activity
             android:name=".MySpendings"
