--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartStackBills"
         tools:targetApi="31">
+        <activity
+            android:name=".createSpending"
+            android:exported="false" />
+        <activity
+            android:name=".createIncome"
+            android:exported="false" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
