--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartStackBills"
         tools:targetApi="31">
-
+        <activity
+            android:name=".calendarView"
+            android:exported="false" />
         <activity
             android:name=".Terms"
             android:exported="false" />
