--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
         android:theme="@style/Theme.SmartStackBills"
         tools:targetApi="31">
         <activity
-            android:name=".calendarView"
-            android:exported="false" />
+            android:name=".CalendarActivity"
+            android:exported="true" />
         <activity
             android:name=".AboutUs"
             android:exported="false" />
